--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 	<meta name="keywords" content="Agence, Web, Design, Lyon, Seo, Site, Graphique, Internet">
     <meta name="description" content="Notre Agence de Web Design aide les Entrepreneurs et Les Entreprises à Devenir Attractive et Visible sur Internet, Nous réalisons Vos Objectifs De Site Moderne Et Réactif.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  viewport-fit=cover,  shrink-to-fit=no">
+	
+		<!-- Start Meta card for Facebook -->
+		<meta property="og:image" content="https://zzmck.github.io/Parcour4/img/logo.webp">
+		<meta property="og:image:alt" content="Logo La Panthère Sur Fond Blanc">
+		<meta property="og:site_name" content="La Panthère Web Design">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="La meilleur agence de web design">
+		<meta property="og:url" content="https://zzmck.github.io/Parcour4/index.html">
+		<meta property="og:description" content="Notre Agence de Web Design aide les Entrepreneurs et Les Entreprises à Devenir Attractive et Visible sur Internet, Nous réalisons Vos Objectifs De Site Moderne Et Réactif.">
+		
+		<!-- START Meta Card for Twitter in English -->
+		<meta name="twitter:site" content="@laPanthereWebDesign">
+		<meta name="twitter:creator" content="@lapanthereWebDesign">
+		<meta name="twitter:title" content="The Best Web Design Agency">
+		<meta name="twitter:description" content="Our Web Design Agency helps Entrepreneurs and Businesses to Become Attractive and Visible on the Internet, We realize Your Modern And Responsive Site Objectives.">
+		<meta name="twitter:image" content="https://zzmck.github.io/Parcour4/img/logo.webp">
+		<meta name="twitter:image:alt" content="Logo La Panthère BackGround White">
+		<meta name="twitter:card" content="summary_large_image">
+		
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 	<!-- Pré load font-->
     <link rel="preload" as="font">
@@ -86,7 +105,6 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.webp" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -94,9 +112,9 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Web design
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
@@ -105,20 +123,20 @@
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					&nbsp;Stratégie
-				</h3>
+				</h2>
 				<p class="text-center ">
-					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 				</p>
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Illustrations
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
@@ -161,18 +179,18 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Création d'un site web pour photographes
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
@@ -181,18 +199,18 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
@@ -248,51 +266,16 @@
 					</div>
 					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-						</ul>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
+<!-- START BackToTop Button-->
+<button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" aria-label="Remonter en haut de la page">
+	<i class="fa-brands fa-arrow-up text-black"></i>
+</button>
+<!-- END BackToTop Button-->
 </main>
 <!-- Principal conteneur END -->
     
