--- a/index.html
+++ b/index.html
@@ -52,35 +52,38 @@
     
 </head>
 <body>
+	<header>
+		<!-- SECTION menu START-->
+		<div class="bg-white sticky-top">
+				<div class="container">
+					<nav class="navbar navbar-expand-md navbar-white  navbar-light bg-white ">
+						<div class="container-fluid float-end">
+							<a href="index.html" aria-label="Aller sur notre Page D'Accueil"><img src="img/logo-agence-panthere.webp" class="image-resize-logo" alt="Bannière de Notre Agence De Design Panthère Sur Fond Blanc"></a>
+	
+							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" aria-controls="menu" aria-label="Ouvrir le menu">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse" id="menu">
+								<ul class="site-navigation nav">
+									<li class="nav-item"><a href="index.html" class="rounded-pill nav-link" aria-label="Page d'accueil">accueil</a></li>
+									<li class="nav-item"><a href="index.html#Services" class="rounded-pill nav-link" aria-label="Nos Services">Services</a></li>
+									<li class="nav-item"><a href="index.html#Presentation" class="rounded-pill nav-link" aria-label="Nos présentations">Présentation</a></li>
+									<li class="nav-item"><a href="index.html#Portfolio" class="rounded-pill nav-link" aria-label="Notre Portfoliol">Portfolio</a></li>
+									<li class="nav-item"><a href="contact.html" class="rounded-pill nav-link" aria-label="Nous contacter">Contact</a></li>
+	
+								</ul>
+							</div>
+	
+						</div>
+					</nav>
+				</div>
+		</div>
+		<!-- SECTION menu END -->
+	</header>
 	<!-- MAIN conteneur START-->
 	<main class="page-container">
     
-	<!-- SECTION menu START-->
-	<div class="bg-white sticky-top">
-		<div class="container">
-			<nav class="navbar navbar-expand-md navbar-white  navbar-light bg-white">
-				<div class="container-fluid float-end">
-					<a href="index.html" aria-label="Aller sur notre Page D'Accueil"><img src="img/logo-agence-panthere.webp" class="image-resize-logo" alt="Bannière de Notre Agence De Design Panthère Sur Fond Blanc"></a>
 
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" aria-controls="menu" aria-label="Ouvrir le menu">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="menu">
-						<ul class="site-navigation nav">
-							<li class="nav-item"><a href="index.html" class="rounded-pill nav-link" aria-label="Page d'accueil">accueil</a></li>
-							<li class="nav-item"><a href="index.html#Services" class="rounded-pill nav-link" aria-label="Nos Services">Services</a></li>
-							<li class="nav-item"><a href="index.html#Presentation" class="rounded-pill nav-link" aria-label="Nos présentations">Présentation</a></li>
-							<li class="nav-item"><a href="index.html#Portfolio" class="rounded-pill nav-link" aria-label="Notre Portfoliol">Portfolio</a></li>
-							<li class="nav-item"><a href="contact.html" class="rounded-pill nav-link" aria-label="Nous contacter">Contact</a></li>
-
-						</ul>
-					</div>
-
-				</div>
-			</nav>
-		</div>
-	</div>
-<!-- SECTION menu END -->
 
 <!-- bloc-1-presentation -->
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
