--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 	<link rel="canonical" href="https://zzmck.github.io/Session4/index.html">
 	<!-- Alternate HrefLang for default -->
 	<link rel="alternate" hreflang="x-default" href="https://zzmck.github.io/Session4/index.html">
+
 	<!-- Pré load font-->
 	<link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin>
 	<!-- Preconnect to CDN For Bootstrap-->
 	<link rel="preconnect" href="https://cdn.jsdelivr.net">
+
 	<!-- CSS Bootstrap Last Version 5.2.3 -->
 	<link rel="preload stylesheet" as="style"
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -127,6 +129,7 @@
 			<div class="container bloc-md">
 				<div class="row justify-content-center">
 					<div class="text-black py-5 w-50 ">
+						<h2 style="display:none">Nos Services</h2>
 						<p class="text-center fs-3">L'agence La panthère est une agence de web design qui aide les
 							entreprises à devenir attractives et visibles sur internet</p>
 					</div>
@@ -135,9 +138,9 @@
 					<div class="card border-0 bg-transparent" style="width: 18rem;">
 						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg text-center"></span>
 						<div class="card-body">
-							<h2 class="mg-md text-center text-dark-slate-blue fs-5">
+							<h3 class="mg-md text-center text-dark-slate-blue fs-5">
 								Web design
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez
 								de zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -148,9 +151,9 @@
 						<span
 							class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg text-center"></span>
 						<div class="card-body">
-							<h2 class="mg-md text-center text-dark-slate-blue fs-5">
+							<h3 class="mg-md text-center text-dark-slate-blue fs-5">
 								Stratégie
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
 								comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
@@ -160,9 +163,9 @@
 					<div class="card border-0 bg-transparent" style="width: 18rem;">
 						<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg text-center"></span>
 						<div class="card-body">
-							<h2 class="mg-md text-center text-dark-slate-blue fs-5">
+							<h3 class="mg-md text-center text-dark-slate-blue fs-5">
 								Illustrations
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 								graphistes talentueux pour donner à vos pages une touche finale d'élégance.
